Added health check endpoint
Fix #16
